fix: change align of addining in group form

--- a/client/src/client-only-routes/admin/admin-global.css
+++ b/client/src/client-only-routes/admin/admin-global.css
@@ -122,7 +122,7 @@
 }
 .add-group-section {
   display: flex;
-  flex-direction: column;
+
   gap: 1rem;
   justify-content: space-between;
 }
